--- a/style.css
+++ b/style.css
@@ -188,5 +188,5 @@ body {
 
 .footer-phone {
   padding-left: 25px;
-  background-image: url("main/my-site/icon-phone-footer.svg");
+  background-image: url("icon-phone-footer.svg");
 }
