--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body {
 
 .footer-email {
   padding-left: 30px;
-  background-image: url("img/icon-email-footer.svg");
+  background-image: url("icon-email-footer.svg");
 }
 
 .footer-phone {
