--- a/style.css
+++ b/style.css
@@ -183,10 +183,10 @@ body {
 
 .footer-email {
   padding-left: 30px;
-  background-image: url("img\icon-email-footer.svg");
+  background-image: url("img/icon-phone-footer.svg");
 }
 
 .footer-phone {
   padding-left: 25px;
-  background-image: url("img\icon-phone-footer.svg");
+  background-image: url("img/icon-phone-footer.svg");
 }
